[gd_scene load_steps=10 format=2]

[ext_resource path="res://music/The_End.ogg" type="AudioStream" id=1]
[ext_resource path="res://Mark's Assets/GUI/Fonts/a-aha-wow/AahaWow.tres" type="Theme" id=2]
[ext_resource path="res://maps/ending.gd" type="Script" id=3]
[ext_resource path="res://Mark's Assets/GUI/Runtime Menu/Credits.tscn" type="PackedScene" id=4]
[ext_resource path="res://Mark's Assets/GUI/Fonts/a-aha-wow/AahaWow1.tres" type="Theme" id=5]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;
// Background Noise

uniform mat2 _rot = mat2( vec2(0.5, 0.86), vec2(-0.86, 0.5));
uniform float _speed = 1.1;
uniform float _gradation : hint_range(0, 2) = 0.5;

float wave(vec2 p) {
	float v = sin(p.x+sin(p.y) + sin(p.y*.43));
	return v*v;
}

float map(float time, vec2 p) {
	float v = 0.0;
	v += wave(p);
	p.x += time * _speed;
	p = p * _rot;
	v += wave(p);
	p.x += time * _speed * .17;
	p = p * _rot;
	v += wave(p);
	v = abs(1.5 - v);

	return v;
}

void fragment()
{
	vec2 resolution = 1.0 / SCREEN_PIXEL_SIZE;
	vec2 uv = (FRAGCOORD.xy * 2.0 - resolution.xy) / min(resolution.x, resolution.y);
	vec2 p = normalize(vec3(uv.xy, 2.3)).xy * 10.0;
	p.y += TIME * _speed * 0.3;
	float v=map(TIME, p);
	
	COLOR = vec4((v * .2 + texture(SCREEN_TEXTURE,SCREEN_UV).r) / 2.0, (v * .3 + texture(SCREEN_TEXTURE,SCREEN_UV).g) / 2.0, (v * 0.49 + texture(SCREEN_TEXTURE,SCREEN_UV).b / 2.0), _gradation);
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/_rot = Transform2D( 0.5, -0.661, 0, 0, 1, 1 )
shader_param/_speed = 1.1
shader_param/_gradation = 0.5

[sub_resource type="Shader" id=3]
code = "// CC0 licence
// Credit Bramwell Williams

shader_type canvas_item;

uniform float circle_size : hint_range(0,1) = 0.5f;

void fragment(){
	if (distance(vec2(0.5,0.5), UV) < circle_size){
		COLOR.a = 0f;
	}
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )
shader_param/circle_size = 1.0

[node name="ending" type="Node2D"]
script = ExtResource( 3 )

[node name="EndingAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
autoplay = true
bus = "Music"

[node name="ColorRect2" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.109804, 0.392157, 0.615686, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource( 2 )
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" parent="." instance=ExtResource( 4 )]
margin_left = 64.0
margin_right = 959.0

[node name="CreditsBackBtn" parent="Credits" index="8"]
visible = false

[node name="Label" type="Label" parent="Credits"]
margin_left = 544.0
margin_top = 16.0
margin_right = 854.0
margin_bottom = 69.0
theme = ExtResource( 5 )
text = "Thank you for playing!
This is all thanks to..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 400.0
margin_top = 488.0
margin_right = 655.0
margin_bottom = 519.0
theme = ExtResource( 2 )
text = "Back to Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CircleTransition" type="ColorRect" parent="."]
material = SubResource( 4 )
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]

[editable path="Credits"]
